# fract-ol

./: CMakeLists.txt  algorithm.c  burningship.c  circle.c  fractol.c  julia.c  mandelbrot.c  menu.c  onaction.c
includes/: fractol.h
